--- a/views/topic_modify.html
+++ b/views/topic_modify.html
@@ -1,5 +1,5 @@
 {{template "header"}}
-<title>文章 - 我的beego博客</title>
+<title>修改文章 - 我的beego博客</title>
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-static-top">
@@ -8,18 +8,19 @@
 		</div><!-- /.container-->
 	</nav>
 	<div class="container" >
-		<h1>添加文章</h1>
+		<h1>修改文章</h1>
 		<form method="POST" action="/topic">
+			<input type="hidden"  name="tid" value="{{.tid}}"/>
 			<div class="form-group">
 				<label>文章标题：</label>
-				<input type="input" class="form-control" name="title" >
+				<input type="input" class="form-control" name="title" value="{{.topic.Title}}">
 			</div>
 			<div class="form-group">
 				<label for="exampleInputEmail1">文章内容</label>
-				<textarea class="form-control" name="content" cols="30" rows="10" ></textarea>
+				<textarea class="form-control" name="content" cols="30" rows="10">{{.topic.Content}}</textarea>
 			</div>
 			<input type="hidden" name="op" value="add">
-			<button type="submit" class="btn btn-default">添加</button>
+			<button type="submit" class="btn btn-default">修改</button>
 		</form>
 	</div>
 	<script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.0.3/jquery.min.js"></script>
